--- a/authentication-page/src/components/LoginComponent/Login.css
+++ b/authentication-page/src/components/LoginComponent/Login.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #1a0e4c;
+    background: linear-gradient(90deg, rgba(18,9,56,1) 0%, rgba(58,37,180,1) 100%, rgba(252,176,69,1) 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -65,7 +65,8 @@ a {
 }
 
 .social-container a {
-    border: 1px solid #ddd;
+    border: 1px solid #fff;
+    color:#fff;
     border-radius: 50%;
     display: inline-flex;
     justify-content: center;
@@ -73,6 +74,13 @@ a {
     margin: 0 5px;
     height: 40px;
     width: 40px;
+}
+.social-container a:hover{
+    color: #000;
+    background-color: #fff;
+}
+input:active{
+    background-color: #fff;
 }
 
 .form-container input {
@@ -85,8 +93,8 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #ff4b2b;
-    background: #ff445c;
+    border: 1px solid #120938;
+    background: #ff416c;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
@@ -94,6 +102,11 @@ button {
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
+}
+button:hover{
+    background-color: #fff;
+    color: #000;
+    border: #fff solid 1px;
 }
 
 button:active {
@@ -106,7 +119,11 @@ button:focus {
 
 button.ghost {
     background: transparent;
-    border-color: #fff;
+    color: #000;
+}
+button.ghost:hover{
+    background-color: #fff;
+    color:#000;
 }
 
 .form-container {
@@ -142,8 +159,8 @@ button.ghost {
 
 .overlay {
     background: #ff416c;
-    background: linear-gradient(to right, #ff4b2b, #ff416c) no-repeat 0 0 / cover;
-    color: #fff;
+    background: linear-gradient(to right, #120938, #ff416c) no-repeat 0 0 / cover;
+    color: #000;
     position: relative;
     left: -100%;
     height: 100%;
@@ -174,8 +191,12 @@ button.ghost {
 
 .overlay-left {
     transform: translateY(-20%);
+    color: #fff;
 }
-
+.overlay-left button{
+    color: #fff;
+    border-color: #fff;
+}
 /* Move signin to right */
 .container.right-panel-active .sign-in-container {
     transform: translateY(100%);
