--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,8 @@
   width: 100vw;
   max-width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
